# jawafdehi-mcp

./: .env.example  .flake8  .gitignore  CHANGELOG.md  README.md  USAGE.md  pyproject.toml  test_tools.py
.github/workflows/: ci.yml  pypi-publish.yml
docs/: ADDING_TOOLS.md  ARCHITECTURE.md
scripts/: format.sh
src/jawafdehi_mcp/: __init__.py  server.py
src/jawafdehi_mcp/tools/: __init__.py  base.py  date_converter.py  document_converter.py  example_tool.py  jawafdehi_cases.py  likhit_extract.py  markitdown_converter.py  nes.py  ngm_extract.py  ngm_judicial.py  ngm_proxy.py
tests/: __init__.py  conftest.py  test_document_converter.py  test_jawafdehi_cases.py  test_jawafdehi_write_tools.py  test_likhit_extract.py  test_markitdown_converter.py  test_nes_tools.py  test_validation.py
tests/tools/: test_ngm_extract.py
